# sysy-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cc
.github/workflows/: main.yml  submit.yml
IR/include/: BasicBlock.h  Function.h  Module.h  Type.h  Value.h
IR/src/: CMakeLists.txt
frontend/: CMakeLists.txt  ast.cc  ast.hh
frontend/grammer/: CMakeLists.txt  sysy.g4
src/: CMakeLists.txt  main.cc
src/analysis/: CMakeLists.txt  alias.hh  depth_order.cc  depth_order.hh  dominator.cc  dominator.hh  func_info.cc  func_info.hh  loop_find.cc  loop_find.hh  usedef_chain.cc  usedef_chain.hh
src/ast/: CMakeLists.txt  ast.cc  ast.hh  ast_printer.cc  ast_printer.hh  astprinter.cc  astprinter.hh  raw_ast.cc  raw_ast.hh
src/ast/grammer/: CMakeLists.txt  sysy.g4
src/codegen/: CMakeLists.txt  codegen.cc  codegen.hh  context.hh  liveness.cc  liveness.hh  peephole.cc  peephole.hh  regalloc.cc  regalloc.hh  regalloc_impl.cc
src/ir/: CMakeLists.txt  basic_block.cc  basic_block.hh  constant.cc  constant.hh  function.cc  function.hh  global_variable.cc  global_variable.hh  inst_visitor.hh  instruction.cc  instruction.hh  ircollector.hh  module.cc  module.hh  type.cc  type.hh  user.hh  value.cc  value.hh
src/ir/include/: Constant.h  Constant.hh  Function.hh  GlobalVariable.h  Instruction.h  Module.hh  Type.hh  test.hh
src/ir/src/: BasicBlock.cc  GlobalVariable.cc  test.cpp
src/ir_builder/: CMakeLists.txt  ir_builder.cc  ir_builder.hh  sysy_builder.cc  sysy_builder.hh
src/mir/: CMakeLists.txt  mir_config.hh  mir_context.hh  mir_function.hh  mir_immediate.hh  mir_impl.cc  mir_instruction.hh  mir_label.hh  mir_memory.hh  mir_module.hh  mir_register.hh  mir_value.hh
src/mir_builder/: CMakeLists.txt  mir_builder.cc  mir_builder.hh
src/pass/: CMakeLists.txt  pass.cc  pass.hh
src/transform/: CMakeLists.txt  DeadCode.cc  DeadCode.hh  algebraic_simplify.cc  algebraic_simplify.hh  array_visit.cc  array_visit.hh  const_propagate.cc  const_propagate.hh  continuous_addition.cc  continuous_addition.hh  control_flow.cc  control_flow.hh  dead_code.cc  dead_code.hh  func_trim.hh  gep2algebra.cc  gep2algebra.hh  gep_expand.cc  gep_expand.hh  global_localize.cc  global_localize.hh  gvn.cc  gvn.hh  induction_expr.cc  induction_expr.hh  inline.cc  inline.hh  local_cmnexpr.cc  local_cmnexpr.hh  loop_invariant.cc  loop_invariant.hh  loop_simplify.cc  loop_simplify.hh  loop_unroll.cc  loop_unroll.hh  mem2reg.cc  mem2reg.hh  naive_rec_opt.cc  naive_rec_opt.hh  (+8 more)
src/utils/: CMakeLists.txt  err.hh  hash.hh  ilist.hh  ir_matcher.hh  log.cc  log.hh  utils.cc  utils.hh
test/: CMakeLists.txt
test/ast/: ASTPrint.cc  CMakeLists.txt  test_ast.cc
test/cases/ast/: 01-initlist-parse.sy
test/cases/codegen/: 01_local_arr_access.sy  02_local_arr_init.sy
test/cases/final_perf/: if-combine1.out  if-combine2.out  matmul1.out  matmul2.out  recursive_call_1.out
test/cases/simplyfied_test/: 39_fp_params.in  39_fp_params.out  39_fp_params.sy  integer-divide-optimization.sy
test/codegen/: CMakeLists.txt  simple_test.cc  test_codegen.cc  test_codegen_i64.cc
test/format/: CMakeLists.txt
test/ir/: CMakeLists.txt  gcd_array.c  test_ir_gcd.cc  test_ir_global_init.cc  test_ir_i64.cc
test/ir_builder/: CMakeLists.txt  test_ir_builder.cc
test/lib/: sylib.c
test/pm/: CMakeLists.txt  test_pm.cc
test/sysy_tests/cases/ast/: 00-const-initlist.sy
test/sysyc/: CMakeLists.txt
test/testcases/: README.md
test/testcases/3-ir-gen/: .gitignore  eval.py  eval_lab5.py
test/testcases/3-ir-gen/testcases/lv0_1/: .gitignore
test/testcases/3-ir-gen/testcases/lv0_2/: .gitignore
test/testcases/5-bonus/: test_time.py
test/testcases/5-bonus/testcases/: 1-return.cminus  10-float.cminus  13-complex.cminus  16-argparse.cminus  16-argparse.out
test/transform/: CMakeLists.txt  test_transform.cc
test/utils/: CMakeLists.txt  test_ilist.cc
tool/: benchmark.sh  bin_debug.sh  bin_test.sh  gencfg.sh  sysyc_test.sh
